docs/css/common.css
html {
  font-size: calc(12px + (18 - 12) * ((100vw - 300px) / (1600 - 300)));
  font-family: 'Helvetica', 'Arial', sans-serif;
}

body {
  background-image: url('../images/background.png');
  background-size: cover;
  background-position: 10% 10%;
  background-attachment: fixed;
}

.logo-heading {
  display: block;
  width: 100%;
  text-align: center;
  margin: 1rem;
  padding: 1rem;
  font-size: 2rem;
  background: url('../images/logo.png') no-repeat;
  background-position: center;
  background-size: contain;
}

#main-content {
  background: #fadfdfe0;
  border-radius: 2rem;
  padding: 1rem;

  position: absolute;
  top: 1rem;
  left: 1rem;
  bottom: 1rem;
  right: 1rem;
  overflow: auto;
}

nav#nav-bar {
  display: block;
  margin: 0.5rem 0 0.5rem 0;
  padding: 0.5rem;
  border-radius: 0.5rem;
  background-color: #182a3b;
  color: white;
}

nav#nav-bar a { color: #7ac1eb; }

[data-tooltip] {
  position: relative;
}

[data-tooltip]:before,
[data-tooltip]:after {
  position: absolute;
  left: 50%;
  transform: translate(-50%);
  -webkit-font-smoothing: antialiased;
  margin: 0 auto;
  opacity: 0;
  visibility: hidden;
  transition: 0.6s ease-in-out 0.4s;
}

[data-tooltip]:before {
  content: " ";
  height: 0;
  width: 0;
  top: calc(100% - 1rem);
  border-style: solid;
  border-width: 1rem;
  border-color: transparent transparent #333 transparent;
}

[data-tooltip]:after {
  content: attr(data-tooltip);
  /* white-space: nowrap; */
  background: #333;
  min-width: 8rem;
  padding: 0.5rem 1rem 0.5rem 1rem;
  font-size: 0.9rem;
  box-sizing: border-box;
  top: calc(100% + 0.9rem);
  color: #fff;
  border-radius: 2px;
  text-shadow: 0px 1px 1px #000;
  z-index: 99;
}

[data-tooltip]:hover:before,
[data-tooltip]:hover:after {
  opacity: 1;
  visibility: visible;
  transition: 0.4s ease-in-out 0.3s;
}

.avatars {
  margin: 0.5rem 0.5rem 0.5rem 2rem;
  height: 5rem;
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
}

.avatars .avatars_item {
  margin-left: -1rem;
  z-index: 1;
}

.avatars_item {
  border-radius: 50%;
  width: 4rem;
  height: 4rem;
  background-size: contain;
  box-shadow: 0 0 0 0.2rem #fff;
}

.guren { background-image: url('../images/G-Guren.png'); }
.pythia { background-image: url('../images/G-Pythia.png'); }
.rosamond { background-image: url('../images/G-Rosamond.png'); }
.sahar { background-image: url('../images/A-Sahar.png'); }
.livia { background-image: url('../images/A-Livia.png'); }
.gabriel { background-image: url('../images/A-Gabriel.png'); }

